<resources>
    <string name="app_name">Together</string>
    <string name="log_in_sign_in">SIGN IN</string>
    <string name="log_in_sign_in_sub">Please sign in to continue.</string>
    <string name="li_email_button">Email</string>
    <string name="li_pwd_button">Password</string>
    <string name="Log_in_startButton">Start</string>
    <string name="Log_in_link_register">Register Now</string>
    <string name="register_register">REGISTER</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_sub_title">Please fill in the form below.</string>
    <string name="register_btnBack">back</string>
    <string name="chat_type_message">Type your message...</string>
</resources>
